--- a/src/graph/graph.css
+++ b/src/graph/graph.css
@@ -1,3 +1,11 @@
 .graph {
   text-align: center;
+  height: 100%;
+}
+#controlButton {
+  margin: 1em;
+}
+line {
+  stroke:rgb(2, 2, 2);
+  stroke-width:2
 }
