--- a/src/app/App.css
+++ b/src/app/App.css
@@ -15,13 +15,26 @@
       "selection merge cycle";
 }
 #title {
-  margin-right: 25%;
+  margin-right: 15%;
   margin-left: 5%;
 }
 
 #headerButton {
   margin-left: 1em;
   margin-right: 1em;
+}
+
+@media screen and (max-width:1250px){
+  #title {
+    margin-right: 5%;
+    margin-left: 0;
+    font-size: 18px;
+  }
+  
+  #headerButton {
+    margin-left: .5em;
+    margin-top: .5em;
+  }
 }
 
 @media screen and (max-width:700px){
@@ -42,7 +55,7 @@
         "cycle";
   }
   #title {
-    margin-right: 2em%;
+    margin-right: 2em;
     margin-left: 1em;
   }
   
@@ -51,6 +64,25 @@
     margin-right: 1em;
     margin-top: .5em;
     
+  }
+
+  .bubble {
+    margin-top: 15%;
+  }
+  .quick {
+    margin-top: 15%;
+  }
+  .insertion {
+    grid-area: insertion;
+  }
+  .selection {
+    margin-top: 15%;
+  }
+  .merge {
+    margin-top: 15%;
+  }
+  .cycle {
+    margin-top: 15%;
   }
 }
 
